--- a/Code/SISTORE/src/Presentacion/FIProductos.form
+++ b/Code/SISTORE/src/Presentacion/FIProductos.form
@@ -236,19 +236,19 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="txppreciocompra" min="-2" pref="77" max="-2" attributes="0"/>
+                          <Component id="txproducto_preciocom" min="-2" pref="77" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="txpprecioventa" min="-2" pref="81" max="-2" attributes="0"/>
+                          <Component id="txproducto_precioven" min="-2" pref="81" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="txpdescripcion" alignment="0" max="32767" attributes="0"/>
+                      <Component id="tx_producto_descripcion" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
-                          <Component id="txpidproducto" min="-2" pref="78" max="-2" attributes="0"/>
+                          <Component id="txproducto_id" min="-2" pref="78" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="txpean" max="32767" attributes="0"/>
+                          <Component id="txproducto_ean" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -264,23 +264,23 @@
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="txestado" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txpumedida" max="32767" attributes="0"/>
-                              <Component id="txpfleje" pref="81" max="32767" attributes="0"/>
+                              <Component id="txproducto_estado" alignment="0" max="32767" attributes="0"/>
+                              <Component id="txproducto_umedida" max="32767" attributes="0"/>
+                              <Component id="txproducto_fleje" pref="81" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btnpbumedida" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="btnpbestado" min="-2" pref="30" max="-2" attributes="0"/>
-                              <Component id="btnpbfleje" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="btnproducto_umedida" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="btnproducto_estado" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="btnproducto_fleje" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="txpcategoria" min="-2" pref="82" max="-2" attributes="0"/>
+                          <Component id="txproducto_categoria" min="-2" pref="82" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="btnpbcategoria" min="-2" pref="30" max="-2" attributes="0"/>
+                          <Component id="btnproducto_categoria" min="-2" pref="30" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -292,9 +292,9 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txpidproducto" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txproducto_id" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txpean" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txproducto_ean" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -304,45 +304,45 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                          <Component id="txpdescripcion" max="-2" attributes="0"/>
+                          <Component id="tx_producto_descripcion" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txppreciocompra" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txproducto_preciocom" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txpprecioventa" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txproducto_precioven" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnpbcategoria" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnproducto_categoria" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txpcategoria" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txproducto_categoria" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txpumedida" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txproducto_umedida" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="btnpbumedida" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnproducto_umedida" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                           <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txestado" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txproducto_estado" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="btnpbestado" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnproducto_estado" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnpbfleje" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnproducto_fleje" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txpfleje" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txproducto_fleje" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -352,7 +352,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JTextField" name="txpidproducto">
+        <Component class="javax.swing.JTextField" name="txproducto_id">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -364,17 +364,17 @@
             <Property name="text" type="java.lang.String" value="Ean"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txpean">
+        <Component class="javax.swing.JTextField" name="txproducto_ean">
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txpeanKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txproducto_eanKeyTyped"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="txpdescripcion">
+        <Component class="javax.swing.JTextField" name="tx_producto_descripcion">
           <AccessibilityProperties>
             <Property name="AccessibleContext.accessibleName" type="java.lang.String" value=""/>
           </AccessibilityProperties>
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txpdescripcionKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tx_producto_descripcionKeyTyped"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
@@ -387,9 +387,9 @@
             <Property name="text" type="java.lang.String" value="P. Compra(S./)"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txppreciocompra">
+        <Component class="javax.swing.JTextField" name="txproducto_preciocom">
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txppreciocompraKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txproducto_preciocomKeyTyped"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
@@ -412,9 +412,9 @@
             <Property name="text" type="java.lang.String" value="P. Venta(S./)"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txpprecioventa">
+        <Component class="javax.swing.JTextField" name="txproducto_precioven">
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txpprecioventaKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txproducto_preciovenKeyTyped"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel11">
@@ -422,73 +422,73 @@
             <Property name="text" type="java.lang.String" value="Fleje"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="btnpbcategoria">
+        <Component class="javax.swing.JButton" name="btnproducto_categoria">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/recursos/lupa.png"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnpbcategoriaActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnproducto_categoriaActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnpbumedida">
+        <Component class="javax.swing.JButton" name="btnproducto_umedida">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/recursos/lupa.png"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnpbumedidaActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnproducto_umedidaActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnpbestado">
+        <Component class="javax.swing.JButton" name="btnproducto_estado">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/recursos/lupa.png"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnpbestadoActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnproducto_estadoActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnpbfleje">
+        <Component class="javax.swing.JButton" name="btnproducto_fleje">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/recursos/lupa.png"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnpbflejeActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnproducto_flejeActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="txpcategoria">
+        <Component class="javax.swing.JTextField" name="txproducto_categoria">
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txpcategoriaKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txproducto_categoriaKeyTyped"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JTextField" name="txpumedida">
+        <Component class="javax.swing.JTextField" name="txproducto_umedida">
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txpumedidaKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txproducto_umedidaKeyTyped"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JTextField" name="txestado">
+        <Component class="javax.swing.JTextField" name="txproducto_estado">
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txestadoKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txproducto_estadoKeyTyped"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JTextField" name="txpfleje">
+        <Component class="javax.swing.JTextField" name="txproducto_fleje">
           <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txpflejeKeyTyped"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txproducto_flejeKeyTyped"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
